--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 authors = ["Wong Jia Hau <hou32hou@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+prettytable-rs = "^0.8"
+difference = "2.0.0"
+diff = "0.1.12"
+annotate-snippets = "0.9.0"
+peeking_take_while = "0.1.2"
+colored = "2"
+strip-ansi-escapes = "0.1.0"
 
 [dev-dependencies]
 insta = "0.16"
