--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ peeking_take_while = "0.1.2"
 colored = "2"
 strip-ansi-escapes = "0.1.0"
 codespan-reporting = "0.11.0"
+relative-path = "1.3.2"
 
 [dev-dependencies]
 insta = "1.5.3"
