--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ colored = "2"
 strip-ansi-escapes = "0.1.0"
 codespan-reporting = "0.11.0"
 relative-path = "1.3.2"
+indexmap = "1.6.2"
 
 [dev-dependencies]
 insta = "1.5.3"
