--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ strip-ansi-escapes = "0.1.0"
 codespan-reporting = "0.11.0"
 relative-path = "1.3.2"
 indexmap = "1.6.2"
+itertools = "0.10.0"
 
 [dev-dependencies]
 insta = "1.5.3"
