--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ codespan-reporting = "0.11.0"
 relative-path = "1.3.2"
 indexmap = "1.6.2"
 itertools = "0.10.0"
+crossbeam-channel = "0.5.4"
 
 [dev-dependencies]
 insta = "1.5.3"
