--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ relative-path = "1.3.2"
 indexmap = "1.6.2"
 itertools = "0.10.0"
 crossbeam-channel = "0.5.4"
+tokio = { version = "1.17.0", features = ["full"] }
+futures = "0.3.21"
+rpds = "0.11.0"
 
 [dev-dependencies]
 insta = "1.5.3"
