--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ crossbeam-channel = "0.5.4"
 tokio = { version = "1.17.0", features = ["full"] }
 futures = "0.3.21"
 rpds = "0.11.0"
+pulldown-cmark = "0.9.2"
 
 [dev-dependencies]
 insta = "1.5.3"
