--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tokio = { version = "1.17.0", features = ["full"] }
 futures = "0.3.21"
 rpds = "0.11.0"
 pulldown-cmark = "0.9.2"
+include_dir = "0.7.3"
 
 [dev-dependencies]
 insta = "1.5.3"
