--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ futures = "0.3.21"
 rpds = "0.11.0"
 pulldown-cmark = "0.9.2"
 include_dir = "0.7.3"
+pretty = "0.11.3"
 
 [dev-dependencies]
 insta = "1.5.3"
