--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Wong Jia Hau <hou32hou@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-clap = "3.0.0-beta.2"
+clap = { version = "4.0.32" ,features = ["derive"] }
 prettytable-rs = "^0.8"
 difference = "2.0.0"
 diff = "0.1.12"
@@ -17,7 +17,7 @@ relative-path = "1.3.2"
 indexmap = "1.9.1"
 itertools = "0.10.0"
 crossbeam-channel = "0.5.4"
-tokio = { version = "1.17.0", features = ["full"] }
+tokio = { version = "1.23.0", features = ["full"] }
 futures = "0.3.21"
 rpds = "0.11.0"
 pulldown-cmark = "0.9.2"
